src/objects/Upgrade_Option__c.object
<CustomObject>
    <fields>
        <fullName>API_Block_Behaviour__c</fullName>
        <label>API Block Behaviour</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                <fullName>Block CC</fullName>
                </value>
                <value>
                <fullName>Block DD</fullName>
                </value>
                <value>
                <fullName>Block All</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ExactTarget_Template_Id__c</fullName>
        <label>ExactTarget Template Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>From_Product_Type__c</fullName>
        <formula>TEXT(Pricing_Option_From__r.Product_Type__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>From Product Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pricing_Option_From__c</fullName>
        <label>Pricing Option From</label>
        <referenceTo>Pricing_Options__c</referenceTo>
        <relationshipLabel>Upgrade Options</relationshipLabel>
        <relationshipName>Upgrade_Options</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Pricing_Option_To__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Pricing Option To</label>
        <referenceTo>Pricing_Options__c</referenceTo>
        <relationshipLabel>Upgrade Options (Pricing Options To)</relationshipLabel>
        <relationshipName>Upgrade_Options1</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>To_Product_Type__c</fullName>
        <formula>TEXT(Pricing_Option_To__r.Product_Type__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>To Product Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Upgrade_Confirmation_Text__c</fullName>
        <label>Upgrade Confirmation Text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Upgrade_Description__c</fullName>
        <label>Upgrade Description</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Upgrade_Page_Filter__c</fullName>
        <description>Value selected here will be used as a query filter on respective upgrade page.</description>
        <label>Upgrade Page Filter</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                <fullName>TABLET</fullName>
                </value>
                <value>
                <fullName>WEBPACK</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Upgrade_Sub_Text__c</fullName>
        <label>Upgrade Sub Text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Upgrade Option</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Pricing_Option_From__c</columns>
        <columns>Pricing_Option_To__c</columns>
        <columns>Upgrade_Confirmation_Text__c</columns>
        <columns>Upgrade_Description__c</columns>
        <columns>Upgrade_Sub_Text__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{0000000000}</displayFormat>
        <label>UpgradeOptions Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Upgrade Options</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>ServicePriceToNotNull</fullName>
        <active>true</active>
        <errorConditionFormula>IsNull(Pricing_Option_To__r.ServicePriceId__c)</errorConditionFormula>
        <errorDisplayField>Pricing_Option_To__c</errorDisplayField>
        <errorMessage>The target pricing option must have both ServiceId and ServicePriceId</errorMessage>
    </validationRules>
</CustomObject>